<resources>
    <string name="app_name">Digging quiz</string>
    <string name="goldurs">UserLogin</string>
    <string name="G">Q</string>
    <string name="heading1">Login</string>
    <string name="heading2">Login</string>
    <string name="hint_mobileno">Mobile No.</string>
    <string name="hint_password">Password</string>
    <string name="forgot">Forgot</string>
    <string name="Signin">Login</string>
    <string name="hint_name">User Name</string>
    <string name="hint_email">Enter Email Id</string>
    <string name="tanuj">Tanuj yadav</string>
    <string name="phoneno">9650108704</string>
    <string name="Quize">Quiz</string>
    <string name="hint_quiz">Quiz</string>
    <string name="plan1">Plane 1</string>
    <string name="fivequestion">5 Quiz in a Month</string>
    <string name="hint_UserMobile">User Name</string>
    <string name="hint_Username">User Name</string>
    <string name="hint_usermobile">Mobile Number</string>
    <string name="hint_Plane">Plane 1</string>
    <string name="hint_tanuj">Tanuj Yadav</string>
    <string name="hint_no">+919650108704</string>
    <string name="myaccount">My Account</string>
    <string name="hint_fivequiz">5 Quiz in a Month</string>
    <string name="hint_Mywallet">My Wallet Balance</string>
    <string name="hint_amount">2000</string>
    <string name="Remark">Remark</string>
    <string name="amount">amount</string>
    <string name="aboutus">asdasd</string>
    <string name="date">21-05-2019</string>
    <string name="wingingamount">Winning Amount 60</string>
    <string name="StartQuiz">Start Quiz</string>
    <string name="time">6:00 Pm to 11:59 pm</string>
    <string name="login">Log in</string>
    <string name="timer">28:36:14</string>
    <string name="resultyouwon">Result You Won</string>
    <string name="Rs">\u20A8</string>
    <string name="next">Next</string>
    <string name="hint_quizecomplete">Quiz Completed</string>
    <string name="hint_quizelost">Quiz Lost</string>
    <string name="hint_quizeremain">Quiz Remain</string>
    <string name="hint_pinamount">Pin Amount</string>
    <string name="hint_totalquiz">Total Quiz</string>
    <string name="hint_yourwallet">Your Wallet Balance</string>
    <string name="hint_withdraw">WITHDRAW</string>
    <string name="hint_statement">Statement</string>
    <string name="hint_date">Date</string>
    <string name="hint_quizname">Quiz Name</string>
    <string name="hintwithdraw">Withdraw</string>
    <string name="hint_withdrawbalance">Balance</string>
    <string name="hint_status">Status</string>
    <string name="hint_withdrawlist">Withdraw List</string>
    <string name="hint_datevalue">03-07-2019</string>
    <string name="hint_quiznamevalue">Quize 1</string>
    <string name="won">Won</string>
    <string name="hint_pending">Pending</string>
    <string name="hint_enteramount">Enter Amount to Withdraw</string>
    <string name="hint_amounts">Amount</string>
    <string name="hintok">Ok</string>
    <string name="hint_confirm">Are you sure you want to withdraw</string>
    <string name="hint_confirm_msg">Your Withdraw Request placed successfully money will be transferred in your bank
        account with in 2-3 working days.
    </string>
    <string name="hint_quizewon">Quiz Won</string>
    <string name="allreadycreated">Quiz Already Created</string>
    <string name="logout">Logout</string>
    <string name="editprofile">User Sign Up</string>
    <string name="hint_UsernameName">User Name</string>
    <string name="hint_address">Address</string>
    <string name="hint_MobileNo">Mobile No.</string>
    <string name="submit">Sign Up</string>
    <string name="buttonsignup">Sign Up</string>
</resources>
