<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent" android:layout_height="match_parent"

                android:orientation="vertical"
                android:background="@drawable/bsckground"

>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin50"
    >
        <TextView
                android:id="@+id/tv_loginheader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="@dimen/sp28"
                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/margin15"/>
        <ImageView
                android:id="@+id/imglogo"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:foregroundGravity="center_horizontal"
                android:src="@drawable/logo"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/tv_loginheader"
                android:layout_marginTop="@dimen/margin10"
        />
        <LinearLayout
                android:id="@+id/linerEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/margin15"
                android:layout_below="@+id/imglogo"
                android:layout_marginTop="@dimen/margin20"
        android:layout_marginRight="@dimen/margin15">

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInput_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"

                    android:textColorHint="@color/white"
                    app:hintTextAppearance="@style/GreenTextInputLayout"
                    android:layout_below="@+id/imglogo"


            >

                <EditText
                        android:id="@+id/edit_username"
                        style="@style/editTextTheme"
                        android:hint="@string/hint_name"
                        android:padding="@dimen/margin5"
                        android:layout_marginBottom="@dimen/margin2"
                        android:fontFamily="@font/play_regular"
                        android:background="@null"


                />
            </android.support.design.widget.TextInputLayout>
            <View android:layout_width="match_parent"
                  android:layout_height="0.5dp"
                  android:background="@color/greytext"/>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInput_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin2"
                    android:layout_below="@+id/textInput_name"
                    android:textColorHint="@color/white"
                    app:hintTextAppearance="@style/GreenTextInputLayout"
            >

                <EditText
                        android:id="@+id/editPassword"
                        style="@style/editTextTheme"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:padding="@dimen/margin5"

                        android:fontFamily="@font/play_regular"
                        android:background="@null"

                />
            </android.support.design.widget.TextInputLayout>
            <View android:layout_width="match_parent"
                  android:layout_height="0.5dp"
                  android:background="@color/greytext"/>
        </LinearLayout>


        <Button
                android:id="@+id/buttonLogin"
                android:layout_width="180dp"
                style="@style/buttonThemeYellow"
                android:layout_below="@+id/linerEditText"
                android:gravity="center"
                android:text="@string/Signin"
                android:layout_marginTop="@dimen/margin30"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/sfregular"
        />
        <Button
                android:id="@+id/buttonsignup"
                android:layout_width="180dp"
                style="@style/buttonThemewhite"
                android:layout_below="@+id/buttonLogin"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:text="@string/buttonsignup"

                android:layout_marginTop="@dimen/margin10"

        />
    </RelativeLayout>


</RelativeLayout>

