<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="10dp"
              android:background="@drawable/borderpop_windowprime"
>
    <TextView
            android:id="@+id/tvheader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center"
            android:text="@string/hint_enteramount"
            android:textSize="@dimen/sp17"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginBottom="@dimen/margin10"
            android:padding="@dimen/margin5"
            android:layout_marginLeft="@dimen/margin5"
            android:layout_marginRight="@dimen/margin5"
            android:fontFamily="@font/sfregular"/>






    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">


        <EditText
                android:id="@+id/edit_amount"
                style="@style/editTextnewTheme"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/margin5"
                android:background="@color/lighteBlueNew"
                android:fontFamily="@font/sfregular"
                android:hint="@string/hint_amounts"
                android:maxLines="1"

                android:paddingBottom="@dimen/margin5"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:inputType="number"
        android:layout_marginLeft="@dimen/margin5"
                android:gravity="center"

        />
        <TextView
                android:id="@+id/textviewdialogsubmit"
                android:layout_width="0dp"
                android:layout_weight="0.5"

                android:layout_height="40dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/hintok"
                android:background="@drawable/button_redselector"
                android:fontFamily="@font/sfregular"
        android:padding="@dimen/margin5"/>
    </LinearLayout>
</LinearLayout>