<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="@color/homebackground"
                  android:orientation="vertical">
        <!--User Image View-->
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        android:background="@color/white">
            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_profile_edit"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentLeft="true"
                    android:layout_margin="20dp"
                    android:src="@drawable/girl"
                    app:civ_border_color="@color/colorTransparent"
                    app:civ_border_width="2dp" />
            <!--   <ImageView
                   android:id="@id/img_profile_edit"
                   android:layout_width="150dp"
                   android:layout_height="150dp"
                   android:layout_centerInParent="true"
                   android:layout_margin="20dp"
                   android:src="@drawable/ic_camera"
                   />-->

            <TextView
                    android:id="@+id/tv_Username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:padding="@dimen/margin5"
                    android:text="@string/hint_tanuj"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/margin25"
                    android:layout_toRightOf="@+id/img_profile_edit"/>
            <TextView
                    android:id="@+id/tv_Usermobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:padding="@dimen/margin5"
                    android:text="@string/hint_no"
                    android:textColor="@color/black"

                    android:layout_toRightOf="@+id/img_profile_edit"
                     android:layout_below="@+id/tv_Username"/>

        </RelativeLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin10"
        android:background="@color/white"

        >

            <TextView
                    android:id="@+id/tv_planName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/hint_Plane"
                    android:paddingLeft="@dimen/margin10"
                    android:paddingTop="@dimen/margin10"
                    android:paddingBottom="@dimen/margin10"
            />
            <TextView
                    android:id="@+id/tv_noofQuize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/greytext"
                    android:text="@string/hint_fivequiz"
                    android:paddingLeft="@dimen/margin15"
                    android:paddingTop="@dimen/margin5"
                    android:paddingBottom="@dimen/margin5"
            />
        </LinearLayout>
        <View
                android:layout_width="match_parent"
              android:layout_height="0.5dp"
                android:background="@color/greytext"/>
        <LinearLayout
                android:id="@+id/liner_myWallet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white">
            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/margin10"
                    android:background="@color/white"

            >
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/hint_Mywallet"
                        android:paddingLeft="@dimen/margin10"
                        android:paddingTop="@dimen/margin10"
                        android:paddingBottom="@dimen/margin10"
                />
                <TextView
                        android:id="@+id/tv_myWallet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/greytext"
                        android:text="@string/hint_amount"
                        android:paddingLeft="@dimen/margin15"
                        android:paddingTop="@dimen/margin5"
                        android:paddingBottom="@dimen/margin5"
                />
            </LinearLayout>

            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_righ_black_24dp"
            android:layout_gravity="center_vertical"
            android:paddingRight="@dimen/margin15"
            android:padding="@dimen/margin10"/>
        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/greytext"/>
    </LinearLayout>

</ScrollView>