<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"

              android:layout_marginTop="@dimen/margin3"
>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"

                  android:background="@color/darkblue"
                  android:orientation="horizontal"
                  android:layout_marginTop="@dimen/margin2"
                  android:paddingTop="@dimen/margin5"
                  android:paddingBottom="@dimen/margin5"

    >

        <TextView
                android:id="@+id/tv_date"
                android:layout_width="0dp"
                  android:layout_weight="1"
                  android:layout_height="match_parent"
                  android:padding="@dimen/margin2"
                  android:text="@string/hint_datevalue"
                  android:textColor="@color/white"
                  android:textSize="@dimen/sp9"
                  android:fontFamily="@font/play_regular"
                  android:gravity="center"
        />
        <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colortexthint"
                android:layout_marginTop="@dimen/margin2"
                android:layout_marginBottom="@dimen/margin2"
        />
        <TextView
                android:id="@+id/tv_status"
                android:layout_width="0dp"
                  android:layout_weight="1"
                  android:layout_height="match_parent"
                  android:padding="@dimen/margin2"
                  android:text="@string/hint_pending"
                  android:textColor="@color/white"
                  android:textSize="@dimen/sp10"
                  android:fontFamily="@font/play_regular"
                  android:gravity="center"
                android:layout_gravity="center_vertical"
        />
        <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colortexthint"
                android:layout_marginTop="@dimen/margin2"
                android:layout_marginBottom="@dimen/margin2"
        />

        <TextView
                android:id="@+id/tv_withdraw"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:padding="@dimen/margin3"
                android:text="@string/hintwithdraw"
                android:textColor="@color/white"
                android:textSize="@dimen/sp10"
                android:fontFamily="@font/play_regular"
                android:gravity="center"
        />


    </LinearLayout>
</LinearLayout>