<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
>

    <TextView
            android:id="@+id/tvheaderr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/editprofile"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="10dp"
            android:fontFamily="@font/sfregular"
    />
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/tvheaderr"
            android:background="@color/colortexthint"
            android:layout_marginTop="@dimen/margin5"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvheaderr"
            android:layout_marginBottom="@dimen/margin5"
            android:paddingLeft="@dimen/margin10"
    >
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
        >
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginTop="@dimen/margin10"
                        android:paddingBottom="@dimen/margin10"
                >


                    <LinearLayout
                            android:id="@+id/linerdetail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                    >

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colortexthint"
                                android:gravity="left"
                                android:text="@string/hint_UsernameName"
                                android:padding="@dimen/margin2"/>
                        <EditText
                                android:id="@+id/edit_companyname"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                style="@style/editTextnewTheme"
                                android:layout_margin="@dimen/margin5"
                                android:hint="@string/hint_UsernameName"
                                android:textColorHint="@color/colortexthint"
                                android:textColor="@color/colorPrimaryDark"
                                android:background="@null"
                                android:maxLines="1"

                                android:fontFamily="@font/sfregular"
                                android:paddingTop="@dimen/margin10"
                                android:paddingBottom="@dimen/margin10"
                                android:paddingLeft="@dimen/margin10"/>
                        <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_below="@+id/layoutusername"
                                android:background="@color/colortexthint"

                                android:layout_marginTop="@dimen/margin5"/>
                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colortexthint"
                                android:gravity="left"
                                android:text="@string/hint_address"
                                android:padding="@dimen/margin2"/>
                        <EditText
                                android:id="@+id/edit_address"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                style="@style/editTextnewTheme"
                                android:layout_margin="@dimen/margin5"
                                android:hint="@string/hint_address"
                                android:textColorHint="@color/colortexthint"
                                android:textColor="@color/colorPrimaryDark"
                                android:background="@null"
                                android:maxLines="1"

                                android:fontFamily="@font/sfregular"
                                android:paddingTop="@dimen/margin10"
                                android:paddingBottom="@dimen/margin10"
                                android:paddingLeft="@dimen/margin10"/>

                        <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_below="@+id/layoutusername"
                                android:background="@color/colortexthint"

                                android:layout_marginTop="@dimen/margin5"/>
                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colortexthint"
                                android:gravity="left"
                                android:text="@string/hint_email"
                                android:padding="@dimen/margin2"/>
                        <EditText
                                android:id="@+id/edit_website"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                style="@style/editTextnewTheme"
                                android:layout_margin="@dimen/margin5"
                                android:hint="@string/hint_email"
                                android:textColorHint="@color/colortexthint"
                                android:textColor="@color/colorPrimaryDark"
                                android:background="@null"
                                android:maxLines="1"

                                android:fontFamily="@font/sfregular"
                                android:paddingTop="@dimen/margin10"
                                android:paddingBottom="@dimen/margin10"
                                android:paddingLeft="@dimen/margin10"/>
                        <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_below="@+id/layoutusername"
                                android:background="@color/colortexthint"

                                android:layout_marginTop="@dimen/margin5"/>
                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colortexthint"
                                android:gravity="left"
                                android:text="@string/hint_MobileNo"
                                android:padding="@dimen/margin2"/>
                        <EditText
                                android:id="@+id/edit_Mobileno"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                style="@style/editTextnewTheme"
                                android:layout_margin="@dimen/margin5"
                                android:hint="@string/hint_MobileNo"
                                android:textColorHint="@color/colortexthint"
                                android:textColor="@color/colorPrimaryDark"
                                android:background="@null"
                                android:maxLines="1"
                                android:inputType="number"
                                android:fontFamily="@font/sfregular"
                                android:paddingTop="@dimen/margin10"
                                android:paddingBottom="@dimen/margin10"
                                android:paddingLeft="@dimen/margin10"/>








                    </LinearLayout>

                    <Button
                            android:id="@+id/btn_create"
                            style="@style/buttonTheme"
                            android:gravity="center"
                            android:text="@string/submit"
                            android:layout_below="@+id/linerdetail"
                            android:layout_gravity="center|bottom"
                            android:layout_marginTop="@dimen/margin40"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                    />
                </RelativeLayout>


            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</RelativeLayout>